<?xml version="1.0"?>
<package format="2">
  <name>qthread_ros</name>
  <version>0.1.0</version>
  <description>
    "Qthread ROS package for multiple node using single GUI"
  </description>
  <maintainer email="menggu1234@naver.com">mjlee111</maintainer>
  <author>mjlee111</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
